# Fellaga-SubDomainFinder

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  install.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: PASSIVE_TOP30.md  README.md  authorized-domains.example.txt  keys-manifest.example.json  names.py  passive_top30_report.py  preflight.py  redact.py  report.py  run-passive-top30.sh  run.sh  timed.py  toolset.example.json  toolset.py
benchmarks/data/: README.md  tranco-74J5X-top30.csv  tranco-74J5X-top30.json  tranco-74J5X-top30.txt
benchmarks/tests/: test_names.py  test_passive_top30.py  test_preflight.py  test_redact.py  test_report.py  test_run_sh.py  test_timed.py  test_toolset.py
data/: CORPUS_LICENSE.md  candidates-1m.txt.zst  corpus-manifest.json  seed_patterns.txt  seed_words.txt
docs/: README.md  architecture.md  discovery-engine.md  installation.md  local-data.md  release-verification.md  sources.md  usage.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: normalize_name.rs
packaging/: check_release_consistency.py  generate_supply_chain.py
packaging/debian/: changelog  copyright
packaging/tests/: test_check_release_consistency.py  test_generate_supply_chain.py
scripts/: build-corpus.sh
src/: archive_intelligence.rs  axfr.rs  benchmark.rs  candidate.rs  confidence.rs  console.rs  ct_monitor.rs  ct_static.rs  db.rs  discovery.rs  dns.rs  dns_policy.rs  dnssec.rs  dnssec_proof.rs  intelligence.rs  lib.rs  main.rs  metadata_discovery.rs  model.rs  network_governor.rs  output.rs  passive.rs  pipeline.rs  scanner.rs  source_contract.rs  tls.rs  util.rs  web_discovery.rs
src/cli/: args.rs  imports.rs  mod.rs  output.rs  profile.rs  runtime.rs
src/cli/commands/: exchange.rs  inventory.rs  mod.rs  refresh.rs  scan.rs  sources.rs  tools.rs
src/cli/console/: mod.rs  progress.rs  render.rs  tests.rs  text.rs
src/cli/tests/: args.rs  imports.rs  mod.rs  output.rs  profile.rs  runtime.rs  sources.rs
src/db/: connection.rs  enrichment.rs  intelligence.rs  observations.rs  passive.rs  read_model.rs  scan.rs  tests.rs
src/dns/: engine.rs  policy.rs  tests.rs  transport.rs  wire.rs
src/passive/: catalog.rs  config.rs  dispatch.rs  extra.rs  ip_pivot.rs  keyed_sources.rs  pagination.rs  providers.rs  public_sources.rs  runtime.rs  tests.rs  transport.rs
src/scanner/: active_validation.rs  api.rs  candidates.rs  enrichment.rs  execution.rs  finalization.rs  findings.rs  initial_discovery.rs  lifecycle.rs  passive_phase.rs  plan.rs  policy.rs  refresh.rs  resolution.rs  run.rs  support.rs  tests.rs  validation.rs  wildcard.rs
tests/: architecture.rs  archive_intelligence.rs  dnssec_proof.rs
tests/dns-lab/: Dockerfile  README.md  cli-wordlist.txt  named.conf  start.sh  verify-fellaga.sh  verify.sh
tests/dns-lab/zones/: hijack.test.zone  lab.test.zone  nsec.lab.test.zone  nsec3.lab.test.zone  refused.lab.test.zone
tests/fixtures/: README.md  binaryedge-page.json  brave-page.json  censys-platform-v3-page.json  driftnet-summary.json  merklemap-page.json  netlas-page.json  postman-search-page.json  viewdns-page.json  whoisxml-page.json
tests/fixtures/archive/: bundle.js  bundle.js.map  commoncrawl-response.warc
tests/fixtures/ct/: letsencrypt-sycamore-2026h2.checkpoint
tests/fixtures/metadata/: api-catalog.json  host-meta.xml  openid.json  ssh-known-hosts
