[package]
name = "fellaga-subdomainfinder"
version = "0.8.1"
edition = "2024"
rust-version = "1.95"
description = "Fast, learning subdomain enumerator for Kali Linux"
license = "MIT"
readme = "README.md"
authors = ["Brahim-Fouad GUIA <170998597+Brahim-Fouad@users.noreply.github.com>"]
repository = "https://github.com/Brahim-Fouad/Fellaga-SubDomainFinder"
homepage = "https://github.com/Brahim-Fouad/Fellaga-SubDomainFinder"
documentation = "https://github.com/Brahim-Fouad/Fellaga-SubDomainFinder#readme"
publish = false
keywords = ["dns", "subdomain", "reconnaissance", "kali", "sqlite"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "fellaga_core"
path = "src/lib.rs"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[[bin]]
name = "fellaga"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.6", features = ["derive", "env"] }
futures-util = "0.3"
hickory-net = { version = "0.26.1", features = ["dnssec-ring"] }
hickory-resolver = "0.26.1"
httpdate = "1.0"
openssl = "0.10.81"
psl = "2.1"
reqwest = { version = "0.13.4", features = ["json", "query"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
socket2 = "0.6"
tokio = { version = "1.52", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
url = "2.5"
zstd = "0.13"

[dev-dependencies]
proptest = "1.8"
tempfile = "3.20"

[package.metadata.deb]
name = "fellaga"
maintainer = "Brahim-Fouad GUIA <170998597+Brahim-Fouad@users.noreply.github.com>"
section = "net"
priority = "optional"
assets = [
  ["target/release/fellaga", "usr/bin/fellaga", "755"],
  ["README.md", "usr/share/doc/fellaga/README.md", "644"],
  ["CHANGELOG.md", "usr/share/doc/fellaga/CHANGELOG.md", "644"],
  ["CONTRIBUTING.md", "usr/share/doc/fellaga/CONTRIBUTING.md", "644"],
  ["SECURITY.md", "usr/share/doc/fellaga/SECURITY.md", "644"],
  ["LICENSE", "usr/share/doc/fellaga/LICENSE", "644"],
  ["THIRD_PARTY_NOTICES.md", "usr/share/doc/fellaga/THIRD_PARTY_NOTICES.md", "644"],
  ["docs/README.md", "usr/share/doc/fellaga/docs/README.md", "644"],
  ["docs/installation.md", "usr/share/doc/fellaga/docs/installation.md", "644"],
  ["docs/usage.md", "usr/share/doc/fellaga/docs/usage.md", "644"],
  ["docs/discovery-engine.md", "usr/share/doc/fellaga/docs/discovery-engine.md", "644"],
  ["docs/sources.md", "usr/share/doc/fellaga/docs/sources.md", "644"],
  ["docs/local-data.md", "usr/share/doc/fellaga/docs/local-data.md", "644"],
  ["docs/release-verification.md", "usr/share/doc/fellaga/docs/release-verification.md", "644"],
  ["data/CORPUS_LICENSE.md", "usr/share/doc/fellaga/data/CORPUS_LICENSE.md", "644"],
  ["data/corpus-manifest.json", "usr/share/doc/fellaga/data/corpus-manifest.json", "644"],
]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
