[package]
name = "fellaga-subdomainfinder"
version = "0.9.2"
edition = "2024"
rust-version = "1.95"
description = "Fast, learning subdomain enumerator for Kali Linux"
license = "MIT"
readme = "README.md"
authors = ["Brahim-Fouad GUIA <170998597+Brahim-Fouad@users.noreply.github.com>"]
repository = "https://github.com/Brahim-Fouad/Fellaga-SubDomainFinder"
homepage = "https://github.com/Brahim-Fouad/Fellaga-SubDomainFinder"
documentation = "https://github.com/Brahim-Fouad/Fellaga-SubDomainFinder#readme"
publish = false
keywords = ["dns", "subdomain", "reconnaissance", "kali", "sqlite"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "fellaga_core"
path = "src/lib.rs"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[[bin]]
name = "fellaga"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.6", features = ["derive", "env"] }
futures-util = "0.3"
flate2 = "1.1"
hickory-net = { version = "0.26.1", features = ["dnssec-ring"] }
hickory-resolver = { version = "0.26.1", features = ["dnssec-ring"] }
http = "1.4"
httpdate = "1.0"
openssl = "0.10.81"
psl = "2.1"
reqwest = { version = "0.13.4", features = [
    "brotli",
    "deflate",
    "gzip",
    "json",
    "query",
    "zstd",
] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
socket2 = "0.6"
tokio = { version = "1.52", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = "0.7"
url = "2.5"
zstd = "0.13"

[dev-dependencies]
proptest = "1.8"
tempfile = "3.20"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
