[package]
name = "fellaga-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fellaga-core = { path = "..", package = "fellaga-subdomainfinder" }

[[bin]]
name = "normalize_name"
path = "fuzz_targets/normalize_name.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
